Fixed imports, added error handling